addons/kyverno/policies/disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest
spec:
  validationFailureAction: enforce
  rules:
    - name: no-latest-tag
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Use immutable tags instead of :latest"
        pattern:
          spec:
            containers:
              - image: "!*:latest"
